# mmCommander-UART-SDCC

./: .gitignore  .serial  CMakeLists.txt  Makefile  README.md  application.c  cc1111_vcom.c  cc1111rf.c  cc1111uart.c  cc1111usb.c  cc1111usb.lst  cc1111usb.rel  cc1111usb.rst  cc1111usb.sym  cc1111usbdebug.asm  cc1111usbdebug.c  cc1111usbdebug.lst  cc1111usbdebug.rel  cc1111usbdebug.rst  cc1111usbdebug.sym  chipcon_usb.c  dma.c  global.asm  global.c  global.lst  global.rel  global.rst  global.sym
bins/: application.hex
include/: cc1110-ext.h  cc1111.h  cc1111_vcom.h  cc1111rf.h  cc1111usb.h  cc1111usbdebug.h  chipcon_usb.h  dma.h  global.h  types.h
mmCommander-uart-sdcc/: mmCommander-uart-sdcc.layout
